@@ -1,5 +1,9 @@
 2005-11-14  noel  <vnoel@cox.net>
 
+	* logview.c (logview_init): Put the filter bar above the version bar.
+
+2005-11-14  Vincent Noel <vnoel@cox.net>
+
 	* logrtns.c (log_open): Catch errors better.
 
 	* logview.c: Add mnemonics in menus.
